Rework Site model
