# server/models/location/coordinates_precision.go
@@ -4,10 +4,9 @@ type CoordinatePrecision string
 
 //generate:enum
 const (
-	M10     CoordinatePrecision = "m10"
-	M100    CoordinatePrecision = "m100"
-	KM1     CoordinatePrecision = "Km1"
-	KM10    CoordinatePrecision = "Km10"
-	KM100   CoordinatePrecision = "Km100"
+	M100    CoordinatePrecision = "<100m"
+	KM1     CoordinatePrecision = "<1km"
+	KM10    CoordinatePrecision = "<10km"
+	KM100   CoordinatePrecision = "10-100km"
 	Unknown CoordinatePrecision = "Unknown"
 )
